--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,19 +1,164 @@
-
-  <footer class="footer mt-auto fw-light py-4 transparent fixed-bottom bg-darkblue " id="footer">
-    <div class="container-fluid text-light">
-      <span class="text-light">
-        <span class="mx-2"> Pay It Forward &copy;2021</span>
-        | 
-        <a href="#"  class="text-light text-none mx-2">About</a>
-        | 
-        <a href="#" class="text-light text-none mx-2" >Terms</a>
-      </span>
+<footer class="footer mt-auto fw-light py-4 transparent fixed-bottom bg-darkblue " id="footer">
+  <div class="container-fluid text-light">
+    <span class="text-light">
+      <span class="mx-2"> Pay It Forward &copy;2021</span>
+      |
+      <button type="button" class="btn btn-link btn-sm text text-light" data-bs-toggle="modal"
+        data-bs-target="#aboutModal">
+        About
+      </button>
+      |
+      <button type="button" class="btn btn-link btn-sm text text-light" data-bs-toggle="modal"
+        data-bs-target="#termsModal">
+        Terms
+      </button>
+    </span>
+  </div>
+</footer>
+<!-- about -->
+<div class="modal fade" id="aboutModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
     </div>
-  </footer>
+  </div>
+</div>
+<!-- terms -->
+<div class="modal fade " id="termsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl ">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Terms and Agreement</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <pre>
+These terms and conditions ("Agreement") set forth the general terms and conditions of your use of the payitforward.com website ("Website" or "Service") 
+and any of its related products and services (collectively, "Services"). This Agreement is legally binding between you ("User", "you" or "your") and this 
+Website operator ("Operator", "we", "us" or "our"). By accessing and using the Website and Services, you acknowledge that you have read, understood, and
+agree to be bound by the terms of this Agreement. If you are entering into this Agreement on behalf of a business or other legal entity, you represent that 
+you have the authority to bind such entity to this Agreement, in which case the terms "User", "you" or "your" shall refer to such entity. If you do not have 
+such authority, or if you do not agree with the terms of this Agreement, you must not accept this Agreement and may not access and use the Website and Services. 
+You acknowledge that this Agreement is a contract between you and the Operator, even though it is electronic and is not physically signed by you, and it governs
+  your use of the Website and Services. This terms and conditions policy was created with the help of the terms and conditions generator 
+at https://www.websitepolicies.com/terms-and-conditions-generator
 
+Accounts and membership
+
+You must be at least 18 years of age to use the Website and Services. By using the Website and Services and by agreeing to this Agreement you warrant 
+and represent that you are at least 18 years of age. If you create an account on the Website, you are responsible for maintaining the security of your account
+  and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may monitor and review new
+  accounts before you may sign in and start using the Services. Providing false contact information of any kind may result in the termination of your account. 
+You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you,
+including any damages of any kind incurred as a result of such acts or omissions. We may suspend, disable, or delete your account (or any part thereof) if we determine
+that you have violated any provision of this Agreement or that your conduct or content would tend to damage our reputation and goodwill. If we delete your account for
+the foregoing reasons, you may not re-register for our Services. We may block your email address and Internet protocol address to prevent further registration.
+
+User content
+
+We do not own any data, information or material (collectively, "Content") that you submit on the Website in the course of using the Service.
+You shall have sole responsibility for the accuracy, quality, integrity, legality, reliability, appropriateness, and intellectual property ownership
+or right to use of all submitted Content. We may monitor and review the Content on the Website submitted or created using our Services by you.
+You grant us permission to access, copy, distribute, store, transmit, reformat, display and perform the Content of your user account solely as required for the purpose 
+of providing the Services to you. Without limiting any of those representations or warranties, we have the right, though not the obligation, to,
+in our own sole discretion, refuse or remove any Content that, in our reasonable opinion, violates any of our policies or is in any way harmful or objectionable.
+You also grant us the license to use, reproduce, adapt, modify, publish or distribute the Content created by you or stored in your user account for commercial,
+marketing or any similar purpose.
+
+Backups
+
+We perform regular backups of the Website and its Content and will do our best to ensure completeness and accuracy of these backups. 
+In the event of the hardware failure or data loss we will restore backups automatically to minimize the impact and downtime.
+
+Links to other resources
+
+Although the Website and Services may link to other resources (such as websites, mobile applications, etc.), we are not, directly or indirectly, 
+implying any approval, association, sponsorship, endorsement, or affiliation with any linked resource, unless specifically stated herein. 
+We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their resources. 
+We do not assume any responsibility or liability for the actions, products, services, and content of any other third parties. You should carefully review the 
+legal statements and other conditions of use of any resource which you access through a link on the Website and Services. Your linking to any other off-site 
+resources is at your own risk.
+
+Prohibited uses
+
+In addition to other terms as set forth in the Agreement, you are prohibited from using the Website and Services or Content: 
+(a) for any unlawful purpose; (b) to solicit others to perform or participate in any unlawful acts; (c) to violate any international, federal, provincial
+or state regulations, rules, laws, or local ordinances; (d) to infringe upon or violate our intellectual property rights or the intellectual property rights
+of others; (e) to harass, abuse, insult, harm, defame, slander, disparage, intimidate, or discriminate based on gender, sexual orientation, religion, ethnicity, 
+race, age, national origin, or disability; (f) to submit false or misleading information; (g) to upload or transmit viruses or any other type of malicious code
+that will or may be used in any way that will affect the functionality or operation of the Website and Services, third party products and services, or the Internet;
+(h) to spam, phish, pharm, pretext, spider, crawl, or scrape; (i) for any obscene or immoral purpose; or (j) to interfere with or circumvent the security features of 
+the Website and Services, third party products and services, or the Internet. We reserve the right to terminate your use of the Website and Services for violating any 
+of the prohibited uses.
+
+Limitation of liability
+
+To the fullest extent permitted by applicable law, in no event will the Operator, its affiliates, directors, officers, employees, agents, suppliers or licensors be liable 
+to any person for any indirect, incidental, special, punitive, cover or consequential damages (including, without limitation, damages for lost profits, revenue, sales, 
+goodwill, use of content, impact on business, business interruption, loss of anticipated savings, loss of business opportunity) however caused, under any theory of liability, 
+including, without limitation, contract, tort, warranty, breach of statutory duty, negligence or otherwise, even if the liable party has been advised as to the possibility of 
+such damages or could have foreseen such damages. To the maximum extent permitted by applicable law, the aggregate liability of the Operator and its affiliates, officers, 
+employees, agents, suppliers and licensors relating to the services will be limited to an amount greater of one dollar or any amounts actually paid in cash by you to the 
+Operator for the prior one month period prior to the first event or occurrence giving rise to such liability. The limitations and exclusions also apply if this remedy does 
+not fully compensate you for any losses or fails of its essential purpose.
+
+Indemnification
+
+You agree to indemnify and hold the Operator and its affiliates, directors, officers, employees, agents, suppliers and licensors harmless from and against any liabilities, 
+losses, damages or costs, including reasonable attorneys' fees, incurred in connection with or arising from any third party allegations, claims, actions, disputes, or 
+demands asserted against any of them as a result of or relating to your Content, your use of the Website and Services or any willful misconduct on your part.
+
+Severability
+
+All rights and restrictions contained in this Agreement may be exercised and shall be applicable and binding only to the extent that they do not violate any applicable laws 
+and are intended to be limited to the extent necessary so that they will not render this Agreement illegal, invalid or unenforceable. If any provision or portion of any 
+provision of this Agreement shall be held to be illegal, invalid or unenforceable by a court of competent jurisdiction, it is the intention of the parties that the remaining 
+provisions or portions thereof shall constitute their agreement with respect to the subject matter hereof, and all such remaining provisions or portions thereof shall remain 
+in full force and effect.
+
+Dispute resolution
+
+The formation, interpretation, and performance of this Agreement and any disputes arising out of it shall be governed by the substantive and procedural laws of Philippines 
+without regard to its rules on conflicts or choice of law and, to the extent applicable, the laws of Philippines. The exclusive jurisdiction and venue for actions related to 
+the subject matter hereof shall be the courts located in Philippines, and you hereby submit to the personal jurisdiction of such courts. You hereby waive any right to a jury 
+trial in any proceeding arising out of or related to this Agreement. The United Nations Convention on Contracts for the International Sale of Goods does not apply to this 
+Agreement.
+
+Changes and amendments
+
+We reserve the right to modify this Agreement or its terms relating to the Website and Services at any time, effective upon posting of an updated version of this Agreement 
+on the Website. When we do, we will send you an email to notify you. Continued use of the Website and Services after any such changes shall constitute your consent to such 
+changes.
+
+Acceptance of these terms
+
+You acknowledge that you have read this Agreement and agree to all its terms and conditions. By accessing and using the Website and Services you agree to be bound by this 
+Agreement. If you do not agree to abide by the terms of this Agreement, you are not authorized to access or use the Website and Services.
+
+Contacting us
+
+If you would like to contact us to understand more about this Agreement or wish to contact us concerning any matter relating to it, you may send an email to 
+mikoalegre.da@gmail.com.
+
+This document was last updated on June 13, 2021
+          </pre>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+  integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+  integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 </body>
+
 </html>
