--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,7 +48,7 @@
                 <div class="form-check" >
                     <input class="form-check-input" type="checkbox" value="" id="register-check">
                     <label class="form-check-label "style="font-size:12px;" >
-                      By clicking this, you agree to our <a href=""  style="font-size:12px;">terms and services</a> .
+                      By clicking this, you agree to our <a href=""  style="font-size:12px;" data-bs-toggle="modal" data-bs-target="#termsModal">terms and services</a> .
                     </label>
                   </div>
                 <div class="my-3 ">
