--- a/views/forward-page.ejs
+++ b/views/forward-page.ejs
@@ -111,7 +111,7 @@
 
                         </div>
                         <% if(goods){%>
-                            <% if(forward.Forward_Status == 'active' ){%>
+                            <% if(forward.Forward_Status == 'approved' ){%>
                             <a href="/forward/page/donate?id=<%=forward.Forward_ID%>" class="btn w-75 mx-5 bg-blue text-light mb-5 shadow" >
                                 Donate 
                             </a>
