--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -20,11 +20,18 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">About</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        For us giving to others without expecting something in return and forwarding the kindness receive is the whole
+        concept of Pay It Forward.
+
+        Pay it Forward was started because of our group's passion, we believe in the beauty of gift giving and wish to
+        help others who are in need.
+
+        Using the skills and knowledge we learned at our school Institute of Technology, we made it our personal mission
+        to turn our dream into a reality.
       </div>
     </div>
   </div>
