--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,17 +72,14 @@
                 About Pay it Forward
             </div>
             <p class="text-break lh-lg">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non felis lectus. Nunc nec consequat
-                diam. Proin nec ex luctus, fermentum risus at, suscipit sem. Pellentesque libero sem, dictum sit amet
-                congue in, placerat facilisis justo. Nullam commodo mauris at tellus aliquam, et euismod nisl
-                consectetur. Sed at urna libero. Vivamus id lacus vitae magna sodales ullamcorper. Donec ut laoreet
-                diam. Aenean ullamcorper elit vitae leo cursus pretium. Etiam lacinia urna vel luctus consequat.
-                Maecenas lobortis elementum orci, ac imperdiet felis pellentesque vel. In aliquam sollicitudin neque.
+                For us giving to others without expecting something in return and forwarding the kindness receive is the whole
+                concept of Pay It Forward.
 
-                Suspendisse potenti. Morbi enim nulla, aliquam ac tempor in, pretium tristique mi. Sed et justo in eros
-                efficitur sagittis. Ut non orci ligula. Nam libero orci, volutpat in enim ac, hendrerit interdum orci.
-                In tempus accumsan nisi eget maximus. Class aptent taciti sociosqu ad litora torquent per conubia
-                nostra, per inceptos himenaeos. Integer vehicula id eros sit amet finibus.
+                Pay it Forward was started because of our group's passion, we believe in the beauty of gift giving and wish to
+                help others who are in need.
+
+                Using the skills and knowledge we learned at our school Institute of Technology, we made it our personal mission
+                to turn our dream into a reality.
             </p>
         </div>
     </section>
